plugins {
    id "java"
}

sourceCompatibility = "14"

repositories {
    jcenter()
}

dependencies {
    compile project(":chess-core")
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}

compileTestJava {
    options.compilerArgs += ["--enable-preview"]
}

test {
    useJUnitPlatform()
    jvmArgs "--enable-preview"
}

jar {
    manifest {
        attributes "Main-Class": "matvey.realchess.console.ConsoleChess"
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}